--- a/BookCrossing/app/build.gradle
+++ b/BookCrossing/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.android.gms:play-services:4.2.42'
     compile 'com.android.support:appcompat-v7:20.0.0'
+    compile files('C:/Users/Antonio/Documents/Projects/finalApp/BookCrossing/libs/json-simple-1.1.1.jar')
 }
